<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.se</groupId>
        <artifactId>aiconomy</artifactId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>

    <groupId>com.se.aiconomy</groupId>
    <artifactId>aiconomy-server</artifactId>
    <packaging>jar</packaging>

    <name>aiconomy-server</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.se.aiconomy</groupId>
            <artifactId>aiconomy-langchain</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/io.jsondb/jsondb-core -->
        <dependency>
            <groupId>io.jsondb</groupId>
            <artifactId>jsondb-core</artifactId>
            <version>1.0.106</version>
        </dependency>

<!--        <dependency>-->
<!--            <groupId>junit</groupId>-->
<!--            <artifactId>junit</artifactId>-->
<!--            <version>3.8.1</version>-->
<!--            <scope>test</scope>-->
<!--        </dependency>-->
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <release>21</release>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
